--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: bee
 description: "More power Less code"
 version: 1.0.0
+repository: https://github.com/sakiatu/bee
 
 environment:
   sdk: '>=3.3.2 <4.0.0'
@@ -11,8 +12,5 @@ dependencies:
     sdk: flutter
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^3.0.2
 
-flutter:
